More work on rubber band selection
git-svn-id: https://jcae.svn.sourceforge.net/svnroot/jcae/trunk@2222 9c4724a3-da1e-0410-bc68-88f18da35cd4